--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -243,26 +243,30 @@ MICROSERVICE_SIG_PROVIDER_ENABLED=true
 MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
 # MICROSERVICE_BENS_URL=
 # MICROSERVICE_BENS_ENABLED=
-#MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=true
-#MICROSERVICE_ACCOUNT_ABSTRACTION_URL=
+# MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=true
+# MICROSERVICE_ACCOUNT_ABSTRACTION_URL=
 DECODE_NOT_A_CONTRACT_CALLS=true
 # DATABASE_READ_ONLY_API_URL=
-# ACCOUNT_DATABASE_URL=
-# ACCOUNT_POOL_SIZE=
-# ACCOUNT_AUTH0_DOMAIN=
-# ACCOUNT_AUTH0_CLIENT_ID=
-# ACCOUNT_AUTH0_CLIENT_SECRET=
-# ACCOUNT_PUBLIC_TAGS_AIRTABLE_URL=
-# ACCOUNT_PUBLIC_TAGS_AIRTABLE_API_KEY=
-# ACCOUNT_SENDGRID_API_KEY=
-# ACCOUNT_SENDGRID_SENDER=
-# ACCOUNT_SENDGRID_TEMPLATE=
-# ACCOUNT_VERIFICATION_EMAIL_RESEND_INTERVAL=
-# ACCOUNT_PRIVATE_TAGS_LIMIT=2000
-# ACCOUNT_WATCHLIST_ADDRESSES_LIMIT=15
-ACCOUNT_CLOAK_KEY=
-ACCOUNT_ENABLED=false
+
+===== AUTH0 ======
+ACCOUNT_DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
+ACCOUNT_POOL_SIZE=80
+ACCOUNT_AUTH0_DOMAIN=<YOUR_DOMAIN.us.auth0.com>
+ACCOUNT_AUTH0_CLIENT_ID=<YOUR_CLIENTID>
+ACCOUNT_AUTH0_CLIENT_SECRET=<YOUR_SECRET_API>
+ACCOUNT_PUBLIC_TAGS_AIRTABLE_URL=https://airtable.com/<APIKEY_TABLE>
+ACCOUNT_PUBLIC_TAGS_AIRTABLE_API_KEY=<YOUR_APIKEY>
+ACCOUNT_SENDGRID_API_KEY=<APIKEY>
+ACCOUNT_SENDGRID_SENDER=<YOUR_SENDER_TEMPLATE>
+ACCOUNT_SENDGRID_TEMPLATE=<YOUR_TEMPLATE_NAME>
+ACCOUNT_PRIVATE_TAGS_LIMIT=2000
+ACCOUNT_WATCHLIST_ADDRESSES_LIMIT=15
+ACCOUNT_CLOAK_KEY=<YOUR_IEX_KEY>
+ACCOUNT_ENABLED=true
 ACCOUNT_REDIS_URL=redis://redis_db:6379
+ACCOUNT_VERIFICATION_EMAIL_RESEND_INTERVAL=<SEE_ON_DOCS>
+===== AUTH0 ======
+
 EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIXPANEL_TOKEN=
 # MIXPANEL_URL=
@@ -282,3 +286,42 @@ TENDERLY_CHAIN_PATH=
 # NOVES_FI_BASE_API_URL=
 # NOVES_FI_CHAIN_NAME=
 # NOVES_FI_API_TOKEN=
+ETH_OMNI_BRIDGE_MEDIATOR=0xf6A78083ca3e2a662D6dd1703c939c8aCE2e268d
+BSC_OMNI_BRIDGE_MEDIATOR=0x59447362798334d3485c64D1e4870Fde2DDC0d75
+POA_OMNI_BRIDGE_MEDIATOR=0x63be59CF177cA9bb317DE8C4aa965Ddda93CB9d7
+POA_OMNI_BRIDGE=0xc2d77d118326c33BBe36EbeAbf4F7ED6BC2dda5c
+AMB_BRIDGE_MEDIATORS=0xbeD794745e2a0543eE609795ade87A55Bbe935Ba
+INDEXER_TX_ACTIONS_UNISWAP_V3_FACTORY_CONTRACT=0x15D38a36319c0525276E5D69BeFfA7aB4f55845A
+INDEXER_TX_ACTIONS_UNISWAP_V3_NFT_POSITION_MANAGER_CONTRACT=0x4F379EF17783d59AF303E8B07ad0935506e00f4E
+CUSTOM_CONTRACT_ADDRESSES_WETH9=0x2cE89A6c99B45d1b62c1c07cAF731bF12d88C293
+CUSTOM_CONTRACT_ADDRESSES_USDT=0x9DD32D4F511996EFff334B6f4c1229757b963AA2
+CUSTOM_CONTRACT_ADDRESSES_USDC=0x675d653aFC71A433ca5586ed4d52e64b5FFFE787
+CUSTOM_CONTRACT_ADDRESSES_EGNS=0x902740a7Bc8279b1A3beBDf91cf9A016235E8859
+CUSTOM_CONTRACT_ADDRESSES_GNO=0xd9Db270c1B5E3Bd161E8c8503c55cEABeE709552
+CUSTOM_CONTRACT_ADDRESSES_GNOL2=0x3E5c63644E683549055b9Be8653de26E0B4CD36E
+CUSTOM_CONTRACT_ADDRESSES_GNOSPF=0xa6B71E26C5e0845f74c812102Ca7114b6a896AB2
+CUSTOM_CONTRACT_ADDRESSES_GNOCFH=0xf48f2B2d2a534e402487b3ee7C18c33Aec0Fe5e4
+CUSTOM_CONTRACT_ADDRESSES_GNOMS=0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761
+CUSTOM_CONTRACT_ADDRESSES_GNOMSCO=0x40A2aCCbd92BCA938b02010E17A5b8929b49130D
+CUSTOM_CONTRACT_ADDRESSES_GNOSML=0xA65387F16B013cf2Af4605Ad8aA5ec25a2cbA3a2
+CUSTOM_CONTRACT_ADDRESSES_GNOTXA=0x59AD6735bCd8152B84860Cb256dD9e96b85F69Da
+CUSTOM_CONTRACT_ADDRESSES_GNOCC=0x7cbB62EaA69F79e6873cD1ecB2392971036cFAa4
+CUSTOM_CONTRACT_ADDRESSES_0XSPLIT=0x8B0A69fBDC2fB6BF65f64E371569134D4Efc0919
+CUSTOM_CONTRACT_ADDRESSES_0XSPLITMAIN=0xCd267313a43d5A72d950A61179ffCc543764947c
+CUSTOM_CONTRACT_ADDRESSES_ROOT=0x9BCea4c5e6122CC65659C6Fa4900e1F3957D15aA
+CUSTOM_CONTRACT_ADDRESSES_EGNSRR=0x29BC718BD0c91A9430716F229A89e4C796a2409c
+CUSTOM_CONTRACT_ADDRESSES_EGNSBRI=0x2a18772c38A2a909ad1c2Ab1234c3c11e5A29EE3
+CUSTOM_CONTRACT_ADDRESSES_EGNSSMS=0x930DaaD3e8e0d2C3c625846147085dE8387B7525
+CUSTOM_CONTRACT_ADDRESSES_EGNSNW=0x46a05770c66915184FEea838f4B5e582AD651EE8
+CUSTOM_CONTRACT_ADDRESSES_EGNSDO=0x3cd0A6450c655742e13Cdb1f0003708CeF4a9049
+CUSTOM_CONTRACT_ADDRESSES_EGNSEPPO=0xF4e14646b31f8964a6Af4eFe7033bA618Cd7921F
+CUSTOM_CONTRACT_ADDRESSES_EGNSRC=0x5F9162eEC0A9d4a9a565646a05196b0F7EB7bE7f
+CUSTOM_CONTRACT_ADDRESSES_EGNSPR=0x73177F7E5d6AD4f32fadd4262a858CF6A779dD57
+CUSTOM_CONTRACT_ADDRESSES_SPCC=0x00000000F9490004C11Cef243f5400493c00Ad63
+CUSTOM_CONTRACT_ADDRESSES_SPCC11=0x00000000006c3852cbEf3e08E8dF289169EdE581
+CUSTOM_CONTRACT_ADDRESSES_SPCC12=0x00000000000006c7676171937C444f6BDe3D6282
+CUSTOM_CONTRACT_ADDRESSES_SPCC13=0x0000000000000aD24e80fd803C6ac37206a45f15
+CUSTOM_CONTRACT_ADDRESSES_SPCC14=0x00000000000001ad428e4906aE43D8F9852d0dD6
+CUSTOM_CONTRACT_ADDRESSES_VALIDATOR=0x9999995993dd7eafd2753A4c7E35c2354B112036
+CUSTOM_CONTRACT_ADDRESSES_DEPOSIT=0x4242424242424242424242424242424242424242
+NEW_TAGS=[{"tag": "DEPOSIT", "title": "Deposit Contract Address"},{"tag": "VALIDATOR", "title": "Stryatum Institusion Validator"},{"tag": "WETH9", "title": "Wrapped Ethereum"},{"tag": "USDT", "title": "USD Tether"},{"tag": "USDC", "title": "USDC"},{"tag": "EGNS", "title": "Engram Name Service"},{"tag": "GNO", "title": "Gnosis Safe"},{"tag": "0XSPLIT", "title": "0xSplit Main"},{"tag": "0XSPLITMAIN", "title": "0xSplit Wallet"},{"tag": "GNOL2", "title": "Gnosis Safe L2"},{"tag": "GNOSPF", "title": "Gnosis Safe Proxy Factory"},{"tag": "GNOCFH", "title": "Gnosis Safe Compatibility Fallback Handler"},{"tag": "GNOMS", "title": "Gnosis Safe Multi Send"},{"tag": "GNOMSCO", "title": "Gnosis Safe Multi Send Call Only"},{"tag": "GNOSML", "title": "Gnosis Safe Sign MessageLib"},{"tag": "GNOTXA", "title": "Gnosis Safe Simulate TxAccesor"},{"tag": "GNOCC", "title": "Gnosis Safe Create Call"},{"tag": "ROOT", "title": "EGNS Root"},{"tag": "EGNSRR", "title": "EGNS ReverseRegistrar"},{"tag": "EGNSBRI", "title": "EGNS Base Registrar Implementation"},{"tag": "EGNSSMS", "title": "EGNS Static Metadata Service"},{"tag": "EGNSNW", "title": "EGNS Name Wrapper"},{"tag": "EGNSDO", "title": "EGNS Dummy Oracle"},{"tag": "EGNSEPPO", "title": "EGNS Exponential Premium Price Oracle"},{"tag": "EGNSRC", "title": "GRAM Domain Registrar Controller"},{"tag": "EGNSPR", "title": "EGNS Public Resolver"},{"tag": "SPCC", "title": "OpenSea Port Conduit Controller"},{"tag": "SPCC11", "title": "OpenSea 1.1"},{"tag": "SPCC12", "title": "OpenSea 1.2"},{"tag": "SPCC13", "title": "OpenSea 1.3"},{"tag": "SPCC14", "title": "OpenSea 1.4"}]
